fix collapse padding 2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,12 +2,8 @@ body {
 	font-family: cursive;
 }
 
-.navbar-brand{
+.navbar-brand, .nav > li > a{
 	padding: 15px 20px;
-}
-
-.nav > li > a {
-	padding: 10px 20px;
 }
 
 #footer {
